Update hoodflex module to identify user agent (beta)

--- a/templates/register.html
+++ b/templates/register.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div>
-  <h2 id="pre-load" class="subheader">Link Robinhood</h2>
+  <h2 id="pre-load" class="subheader">Link to ROBINHOOD</h2>
 </div>
 
 <div id="register-div" class="form-fields">
