--- a/templates/metrics.html
+++ b/templates/metrics.html
@@ -6,7 +6,7 @@
 {% set results = ratios.get_ratio() %}
 
 <div>
-  <h2 id="head" class="subheader">{{ company.title.upper() }}</h2>
+  <h2 id="head" class="subheader">{{ name.upper() }}</h2>
   <table id="company-detail-table">
     <tbody>
       <tr class="ratios">
