--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
           href="{{ url_for('static', filename='stylesheets/style.css') }}" 
           type="text/css" />
 
-    <script src="//cdn.jsdelivr.net/jquery/2.2.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
       
   </head>
